--- a/username.html
+++ b/username.html
@@ -394,11 +394,9 @@ header {
 
   <div id="turnos"></div>
   <div id="reservaFormContainer" style="display:none;">
- <!-- Logo del usuario -->
-<div id="floatingLogo">
-  <div class="logo-container">
-  <img id="userLogo"></div>
-</div>
+ 
+  <div><img id="userLogo"></div>
+
     
   </div>
 
