--- a/username.html
+++ b/username.html
@@ -353,6 +353,56 @@ header {
     .login-btn:hover {
       background-color: #533482;
     }
+     form {
+    max-width: 400px;
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .input-container {
+    position: relative;
+  }
+
+  .input-container i {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #533482;
+    font-size: 16px;
+  }
+
+  .input-container input,
+  .input-container textarea {
+    width: 100%;
+    padding: 10px 10px 10px 35px; /* espacio para el icono */
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 14px;
+    box-sizing: border-box;
+  }
+
+  .input-container textarea {
+    resize: vertical;
+    min-height: 60px;
+  }
+
+  button {
+    padding: 10px;
+    background: #533482;
+    color: white;
+    font-weight: 600;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+
+  button:hover {
+    background: #3d2460;
+  }
 </style>
 
 </head>
