--- a/username.html
+++ b/username.html
@@ -219,7 +219,19 @@
     font-size: 0.9rem;
   }
 }
+#reservaForm label i {
+  font-family: "Font Awesome 6 Free"; /* fuerza la fuente FA */
+  font-weight: 900; /* necesario para los sólidos (fas) */
+  margin-right: 5px; /* separación del texto */
+  display: inline-block;
+  vertical-align: middle;
+  color: inherit; /* hereda color del label */
+}
 
+#reservaForm label {
+  display: flex;
+  align-items: center;
+}
     .ticket {
       font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
