--- a/username.html
+++ b/username.html
@@ -7,8 +7,7 @@
 
   <!-- Fuentes -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <!-- Librería Font Awesome 6 -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pap6k+oJ6OzOZ2wVv+az+FbU3G4f3gR9rKfKqD9qE6pRkd0EhF7RWfT3h+q6U7nZVrXgT7H5lHdZQFZ+7f+JHQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+ 
 
   <!-- Iconos -->
   <link rel="icon" type="image/png" href="https://i.ibb.co/p6Ycq6XC/Turnox-logo.png">
@@ -632,6 +631,7 @@ function mostrarFormReserva() {
   <label for="nombre"><i class="fas fa-user"></i> Nombre</label>
   <input type="text" id="nombre" name="nombre" placeholder="Nombre" required>
   
+  
   <label for="apellido"><i class="fas fa-user"></i> Apellido</label>
   <input type="text" id="apellido" name="apellido" placeholder="Apellido" required>
   
@@ -753,5 +753,7 @@ document.addEventListener("DOMContentLoaded", () => {
   document.getElementById('floatingLogo').style.transform = 'translateX(0)';
 }, 4000);
 </script>
+  <!-- Cargar Font Awesome Kit -->
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </body>
 </html>
