--- a/username.html
+++ b/username.html
@@ -628,31 +628,30 @@ function mostrarFormReserva() {
     <h3>Reservando turno con  ${selectedProf} el ${fechaBonita} a las ${selectedHora}</h3>
    <form id="reservaForm">
   
-  <label for="nombre"><i class="fas fa-user"></i> Nombre</label>
+  
   <input type="text" id="nombre" name="nombre" placeholder="Nombre" required>
   
   
-  <label for="apellido"><i class="fas fa-user"></i> Apellido</label>
   <input type="text" id="apellido" name="apellido" placeholder="Apellido" required>
   
   <input type="hidden" name="telefono" value="">
   
-  <label for="direccion"><i class="fas fa-location-dot"></i> Dirección</label>
+  
   <input type="text" id="direccion" name="direccion" placeholder="Dirección" required>
   
-  <label for="fechaNacimiento"><i class="fas fa-calendar"></i> Fecha de nacimiento</label>
-  <input type="date" id="fechaNacimiento" name="fechaNacimiento" required>
   
-  <label for="email"><i class="fas fa-envelope"></i> Email</label>
+  <input type="hidden"  name="fechaNacimiento" value="">
+  
+  
   <input type="email" id="email" name="email" placeholder="Email" required>
   
-  <label for="whatsapp"><i class="fab fa-whatsapp"></i> Whatsapp</label>
+  
   <input type="text" id="whatsapp" name="whatsapp" placeholder="Whatsapp" required>
   
-  <label for="dni"><i class="fas fa-id-card"></i> DNI</label>
+  
   <input type="text" id="dni" name="dni" placeholder="DNI" required>
   
-  <label for="comentario"><i class="fas fa-comment"></i> Comentario (opcional)</label>
+  
   <textarea id="comentario" name="comentario" placeholder="Comentario (opcional)"></textarea>
   
   <input type="hidden" name="extra1" value="">
