--- a/username.html
+++ b/username.html
@@ -625,7 +625,9 @@ function mostrarFormReserva() {
   const formContainer = document.getElementById("reservaFormContainer");
   formContainer.style.display = "block";
   formContainer.innerHTML = `
-    <h3>Reservando turno con  ${selectedProf} el ${fechaBonita} a las ${selectedHora}</h3>
+    <h2>Reservando turno con  ${selectedProf}</h2>
+    <h2>el ${fechaBonita}</h2>
+    <h2>a las ${selectedHora}</h2>
    <form id="reservaForm">
   
   
