--- a/username.html
+++ b/username.html
@@ -542,7 +542,7 @@ async function cargarTurnos(fechaStr) {
   });
 
   const turnosDiv = document.getElementById("turnos");
-  turnosDiv.innerHTML = `<h2>Turnos del ${fechaBonita}</h2><p>Cargando...</p>`;
+  turnosDiv.innerHTML = `<h2> ${fechaBonita}</h2><p>Cargando...</p>`;
   document.getElementById("reservaFormContainer").style.display = "none";
 
   try {
