--- a/username.html
+++ b/username.html
@@ -551,7 +551,7 @@ async function cargarTurnos(fechaStr) {
 
     if (data.status !== "ok") {
       turnosDiv.innerHTML = `
-        <h2>Turnos del ${fechaBonita}</h2>
+        <h2> ${fechaBonita}</h2>
         <p style="color:red;">Error al cargar: ${data.msg || "Error desconocido"}</p>
       `;
       return;
@@ -560,7 +560,7 @@ async function cargarTurnos(fechaStr) {
     turnosData = data.turnos;
     profesionales = data.profesionales;
 
-    let html = `<h2>Turnos del ${fechaBonita}</h2>`;
+    let html = `<h2> ${fechaBonita}</h2>`;
 
     if (!turnosData || Object.keys(turnosData).length === 0) {
       html += `<div class="turnos"><p>No hay turnos configurados para esta fecha</p></div>`;
