--- a/username.html
+++ b/username.html
@@ -551,7 +551,7 @@ async function cargarTurnos(fechaStr) {
 
     if (data.status !== "ok") {
       turnosDiv.innerHTML = `
-        <h2> ${fechaBonita}</h2>
+        <h2> Ya casi!</h2>
         <p style="color:red;">Error al cargar: ${data.msg || "Error desconocido"}</p>
       `;
       return;
@@ -560,7 +560,7 @@ async function cargarTurnos(fechaStr) {
     turnosData = data.turnos;
     profesionales = data.profesionales;
 
-    let html = `<h2> ${fechaBonita}</h2>`;
+    let html = `<h2> Falta Menos!</h2>`;
 
     if (!turnosData || Object.keys(turnosData).length === 0) {
       html += `<div class="turnos"><p>No hay turnos configurados para esta fecha</p></div>`;
@@ -625,9 +625,11 @@ function mostrarFormReserva() {
   const formContainer = document.getElementById("reservaFormContainer");
   formContainer.style.display = "block";
   formContainer.innerHTML = `
+  /*
     <p>Vas a reservar turno con ${selectedProf} el ${fechaBonita} a las ${selectedHora}hs.</p>
     <p>Completa los datos, luego confirma la reserva!</p>
-    
+    */
+    <h2>Último paso!</h2>
    <form id="reservaForm">
   
   
