--- a/username.html
+++ b/username.html
@@ -532,43 +532,41 @@ function seleccionarDia(td, fechaStr) {
   cargarTurnos(fechaStr);
 }
 
-/// ------------------ CARGAR TURNOS ------------------
+// ------------------ CARGAR TURNOS ------------------
 async function cargarTurnos(fechaStr) {
-  selectedDate = new Date(fechaStr + "T00:00:00");
-  const fechaBonita = selectedDate.toLocaleDateString("es-ES", {
+  const fechaBonita = new Date(fechaStr + "T00:00:00").toLocaleDateString("es-ES", {
     day: "numeric",
     month: "long",
     year: "numeric"
   });
 
   const turnosDiv = document.getElementById("turnos");
-  turnosDiv.innerHTML = `<h2> ${fechaBonita}</h2><p>Cargando...</p>`;
+  turnosDiv.innerHTML = `<h2>${fechaBonita}</h2><p>Cargando...</p>`;
   document.getElementById("reservaFormContainer").style.display = "none";
+
+  turnosData = {}; // limpiar turnos previos
 
   try {
     const res = await fetch(`${API_URL}?username=${username}&fecha=${fechaStr}`);
     const data = await res.json();
 
     if (data.status !== "ok") {
-      turnosDiv.innerHTML = `
-        <h2> ${fechaBonita}</h2>
-        <p style="color:red;">Error al cargar: ${data.msg || "Error desconocido"}</p>
-      `;
+      turnosDiv.innerHTML = `<h2>${fechaBonita}</h2><p style="color:red;">Error al cargar: ${data.msg || "Error desconocido"}</p>`;
       return;
     }
 
-    turnosData = data.turnos;
-    profesionales = data.profesionales;
+    turnosData = data.turnos || {};
+    profesionales = data.profesionales || {};
 
-   
     let html = "";
 
-    if (!turnosData || Object.keys(turnosData).length === 0) {
+    if (Object.keys(turnosData).length === 0) {
       html += `<div class="turnos"><p>No hay turnos configurados para esta fecha</p></div>`;
     } else {
       Object.keys(turnosData).forEach(profId => {
         const profObj = turnosData[profId];
         html += `<div class="turnos"><h3>${profObj.nombre}</h3>`;
+
         if (!profObj.turnos || profObj.turnos.length === 0) {
           html += "<p>No hay turnos disponibles</p>";
         } else {
@@ -582,6 +580,7 @@ async function cargarTurnos(fechaStr) {
             }>${horaFormateada}</span>`;
           });
         }
+
         html += `</div>`;
       });
     }
@@ -589,14 +588,10 @@ async function cargarTurnos(fechaStr) {
     turnosDiv.innerHTML = html;
   } catch (err) {
     console.error("Error cargando turnos:", err);
-    turnosDiv.innerHTML = `
-      <h2> ${fechaBonita}</h2>
-      <p style="color:red;">No se pudieron cargar los turnos.</p>
-    `;
+    turnosDiv.innerHTML = `<h2>${fechaBonita}</h2><p style="color:red;">No se pudieron cargar los turnos.</p>`;
   }
 }
-  
-  
+
 // ------------------ SELECCIONAR TURNO ------------------
 function seleccionarTurno(profId, hora) {
   selectedProfId = profId;
@@ -758,7 +753,6 @@ document.addEventListener("DOMContentLoaded", () => {
   document.getElementById('floatingLogo').style.transform = 'translateX(0)';
 }, 4000);
 </script>
-  <!-- Cargar Font Awesome Kit -->
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  
 </body>
 </html>
