--- a/username.html
+++ b/username.html
@@ -593,7 +593,7 @@ async function cargarTurnos(fechaStr) {
   }
 }
 
-// ------------------ SELECCIONAR TURNO ------------------
+/ ------------------ SELECCIONAR TURNO ------------------
 function seleccionarTurno(profId, hora) {
   selectedProfId = profId;
   selectedProf = turnosData[profId].nombre;
@@ -604,10 +604,11 @@ function seleccionarTurno(profId, hora) {
 
   // Agregar clase selected a la hora clickeada
   const span = document.querySelector(`.hora.disponible[onclick*="${hora}"]`);
-  if(span) span.classList.add("selected");
+  if (span) span.classList.add("selected");
 
-  mostrarFormReserva();
+  mostrarFormReserva(selectedProfId, selectedHora);
 }
+
 
 function mostrarFormReserva() {
   const fechaStr = selectedDate.toISOString().split("T")[0];
