--- a/username.html
+++ b/username.html
@@ -535,61 +535,73 @@ function seleccionarDia(td, fechaStr) {
 
 // ------------------ CARGAR TURNOS ------------------
 async function cargarTurnos(fechaStr) {
-  const fechaBonita = new Date(fechaStr + "T00:00:00").toLocaleDateString("es-ES", {
+  selectedDate = new Date(fechaStr + "T00:00:00");
+  const fechaBonita = selectedDate.toLocaleDateString("es-ES", {
     day: "numeric",
     month: "long",
     year: "numeric"
   });
 
   const turnosDiv = document.getElementById("turnos");
-  turnosDiv.innerHTML = `<h2>${fechaBonita}</h2><p>Cargando...</p>`;
+  turnosDiv.innerHTML = `<h2> ${fechaBonita}</h2><p>Cargando...</p>`;
   document.getElementById("reservaFormContainer").style.display = "none";
-
-  turnosData = {}; // limpiar turnos previos
 
   try {
     const res = await fetch(`${API_URL}?username=${username}&fecha=${fechaStr}`);
     const data = await res.json();
 
     if (data.status !== "ok") {
-      turnosDiv.innerHTML = `<h2>${fechaBonita}</h2><p style="color:red;">Error al cargar: ${data.msg || "Error desconocido"}</p>`;
+      turnosDiv.innerHTML = `
+        <h2> ${fechaBonita}</h2>
+        <p style="color:red;">Error al cargar: ${data.msg || "Error desconocido"}</p>
+      `;
       return;
     }
 
-    turnosData = data.turnos || {};
-    profesionales = data.profesionales || {};
+    turnosData = data.turnos;
+    profesionales = data.profesionales;
 
     let html = "";
 
-    if (Object.keys(turnosData).length === 0) {
+    if (!turnosData || Object.keys(turnosData).length === 0) {
       html += `<div class="turnos"><p>No hay turnos configurados para esta fecha</p></div>`;
     } else {
       Object.keys(turnosData).forEach(profId => {
         const profObj = turnosData[profId];
         html += `<div class="turnos"><h3>${profObj.nombre}</h3>`;
-
         if (!profObj.turnos || profObj.turnos.length === 0) {
           html += "<p>No hay turnos disponibles</p>";
         } else {
           profObj.turnos.forEach(t => {
             const clase = t.estado === "bloqueado" ? "bloqueado" : "disponible";
             const horaFormateada = t.hora.padStart(5, "0");
-            html += `<span class="hora ${clase}" ${
-              clase === "bloqueado"
-                ? ""
-                : `onclick="seleccionarTurno('${profId}','${horaFormateada}')"`
-            }>${horaFormateada}</span>`;
+            html += `<span 
+                        class="hora ${clase}" 
+                        data-profid="${profId}" 
+                        data-hora="${horaFormateada}">
+                        ${horaFormateada}
+                     </span>`;
           });
         }
-
         html += `</div>`;
       });
     }
 
     turnosDiv.innerHTML = html;
+
+    // 🔽 Agregamos los listeners a las horas disponibles
+    document.querySelectorAll(".hora.disponible").forEach(span => {
+      span.addEventListener("click", () => {
+        seleccionarTurno(span.dataset.profid, span.dataset.hora);
+      });
+    });
+
   } catch (err) {
     console.error("Error cargando turnos:", err);
-    turnosDiv.innerHTML = `<h2>${fechaBonita}</h2><p style="color:red;">No se pudieron cargar los turnos.</p>`;
+    turnosDiv.innerHTML = `
+      <h2> ${fechaBonita}</h2>
+      <p style="color:red;">No se pudieron cargar los turnos.</p>
+    `;
   }
 }
 
