--- a/username.html
+++ b/username.html
@@ -636,7 +636,7 @@ function mostrarFormReserva(profId, hora) {
   const formContainer = document.getElementById("reservaFormContainer");
   formContainer.style.display = "block";
   formContainer.innerHTML = `
-    <h2>Último paso! </h2>
+    <h2>Último paso! </h2><p>Completa tus datos y confirma la reserva con ${turnosData[profId].nombre} el ${fechaBonita} a las ${hora}</p>
    <form id="reservaForm">
   
   
