--- a/panel.html
+++ b/panel.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Panel de Configuración</title>
   <script>
-    const API_URL = "https://script.google.com/macros/s/AKfycbxeerNFWrANHdMHk7S8blTR-GGpatNGY-QsNLHT-HRxo_Ql4n-k0MolCo1sVErUPlooKQ/exec"; // <--- pegá aquí tu Web App desplegado
+    const API_URL = "https://script.google.com/macros/s/AKfycbxRK4WyJlagviZGIqibZd8sISBMwW8WzYKCk0Z6qd-JHYwoImVX3MlfdKACo931zGbaxQ/exec"; 
     let userId = localStorage.getItem("userId");
     let username = localStorage.getItem("username");
     let profesionales = [];
@@ -15,7 +15,6 @@
         window.location.href = "/login.html";
         return;
       }
-
       document.getElementById("username").innerText = username;
       await cargarProfesionales();
     }
@@ -23,7 +22,6 @@
     async function cargarProfesionales() {
       const res = await fetch(`${API_URL}?username=${username}`);
       const data = await res.json();
-
       if (data.status === "ok") {
         profesionales = data.profesionales;
         renderProfesionales();
@@ -33,14 +31,13 @@
     function renderProfesionales() {
       const cont = document.getElementById("profesionales");
       cont.innerHTML = "";
-
       profesionales.forEach(prof => {
         const div = document.createElement("div");
         div.className = "profesional";
         div.innerHTML = `
           <h3>${prof.nombre}</h3>
           <button onclick="abrirTurnos('${prof.profesionalId}','${prof.nombre}')">Configurar Turnos</button>
-          <button onclick="abrirExcepciones('${prof.profesionalId}','${prof.nombre}')">Excepciones</button>
+          <button onclick="eliminarTurnos('${prof.profesionalId}')">🗑 Limpiar Turnos</button>
         `;
         cont.appendChild(div);
       });
@@ -49,50 +46,72 @@
     async function agregarProfesional() {
       const nombre = prompt("Nombre del profesional:");
       if (!nombre) return;
-
       const formData = new FormData();
       formData.append("action","addProfessional");
       formData.append("userId", userId);
       formData.append("nombre", nombre);
-
       const res = await fetch(API_URL, {method:"POST", body:formData});
       const data = await res.json();
-
       if (data.status === "ok") {
         profesionales.push({profesionalId:data.profesionalId, nombre:data.nombre});
         renderProfesionales();
       }
     }
 
-    // ----- Configuración de turnos standard -----
+    // ---------------- CONFIGURACIÓN DE TURNOS ----------------
     function abrirTurnos(profId, nombre) {
       const dias = ["Lunes","Martes","Miércoles","Jueves","Viernes","Sábado","Domingo"];
       let html = `<h2>Turnos Standard de ${nombre}</h2>`;
+      
+      html += `
+        <label>Intervalo: 
+          <select id="intervalo">
+            <option value="15">15 min</option>
+            <option value="20">20 min</option>
+            <option value="30" selected>30 min</option>
+            <option value="60">60 min</option>
+          </select>
+        </label><br><br>
+      `;
 
       dias.forEach(d=>{
-        html += `<h4>${d}</h4><div>`;
-        for (let h=0; h<24; h++) {
-          for (let m=0; m<60; m+=15) {
-            const hora = `${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}`;
-            const id = `${profId}_${d}_${hora}`;
-            html += `<label><input type="checkbox" id="${id}" data-dia="${d}" data-hora="${hora}"> ${hora}</label> `;
-          }
-        }
-        html += `</div>`;
+        html += `
+          <h4>${d}</h4>
+          Desde <input type="time" id="desde_${d}" value="09:00">
+          hasta <input type="time" id="hasta_${d}" value="17:00">
+          <button onclick="generarSlots('${profId}','${d}')">Generar</button>
+          <div id="slots_${profId}_${d}" class="slots"></div>
+        `;
       });
 
       html += `<br><button onclick="guardarTurnos('${profId}')">Guardar</button>`;
-
       document.getElementById("config").innerHTML = html;
+    }
+
+    function generarSlots(profId, dia) {
+      const intervalo = parseInt(document.getElementById("intervalo").value);
+      const desde = document.getElementById(`desde_${dia}`).value;
+      const hasta = document.getElementById(`hasta_${dia}`).value;
+      const cont = document.getElementById(`slots_${profId}_${dia}`);
+      cont.innerHTML = "";
+
+      let [h,m] = desde.split(":").map(Number);
+      let [hf,mf] = hasta.split(":").map(Number);
+
+      while (h < hf || (h===hf && m < mf)) {
+        const hora = `${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}`;
+        const id = `${profId}_${dia}_${hora}`;
+        cont.innerHTML += `<label><input type="checkbox" id="${id}" data-dia="${dia}" data-hora="${hora}" checked> ${hora}</label> `;
+        m += intervalo;
+        if (m >= 60) { m = m-60; h++; }
+      }
     }
 
     async function guardarTurnos(profId) {
       const checkboxes = document.querySelectorAll(`#config input[type=checkbox]`);
       const turnos = [];
       checkboxes.forEach(ch=>{
-        if (ch.checked) {
-          turnos.push({dia: ch.dataset.dia, hora: ch.dataset.hora, visible:1});
-        }
+        turnos.push({dia: ch.dataset.dia, hora: ch.dataset.hora, visible: ch.checked ? 1 : 0});
       });
 
       const formData = new FormData();
@@ -105,42 +124,23 @@
       alert("Turnos guardados correctamente.");
     }
 
-    // ----- Excepciones -----
-    function abrirExcepciones(profId, nombre) {
-      document.getElementById("config").innerHTML = `
-        <h2>Excepciones de ${nombre}</h2>
-        <label>Fecha: <input type="date" id="exc_fecha"></label><br>
-        <label>Hora: <input type="time" id="exc_hora" step="900"></label><br>
-        <select id="exc_estado">
-          <option value="bloqueado">Bloquear</option>
-          <option value="habilitado">Habilitar</option>
-        </select><br><br>
-        <button onclick="guardarExcepcion('${profId}')">Guardar Excepción</button>
-      `;
-    }
-
-    async function guardarExcepcion(profId) {
-      const fecha = document.getElementById("exc_fecha").value;
-      const hora = document.getElementById("exc_hora").value;
-      const estado = document.getElementById("exc_estado").value;
-
+    async function eliminarTurnos(profId) {
+      if (!confirm("¿Seguro que quieres limpiar todos los turnos de este profesional?")) return;
       const formData = new FormData();
-      formData.append("action","saveExcepcion");
+      formData.append("action","saveTurnosStandard");
       formData.append("profesionalId", profId);
-      formData.append("fecha", fecha);
-      formData.append("hora", hora);
-      formData.append("estado", estado);
-
+      formData.append("turnos", JSON.stringify([]));
       const res = await fetch(API_URL, {method:"POST", body:formData});
       const data = await res.json();
-      alert("Excepción guardada correctamente.");
+      alert("Turnos eliminados.");
     }
   </script>
   <style>
     body { font-family: Arial, sans-serif; padding:20px; }
-    .profesional { border:1px solid #ccc; padding:10px; margin:10px 0; }
+    .profesional { border:1px solid #ccc; padding:10px; margin:10px 0; border-radius:8px; }
     h2 { margin-top:20px; }
     label { margin-right:10px; }
+    .slots { margin:5px 0 15px 0; padding:5px; background:#f9f9f9; border-radius:5px; }
   </style>
 </head>
 <body onload="init()">
@@ -150,7 +150,7 @@
       + '&userId=' + encodeURIComponent(userId);
     ">
       💳 Créditos
-    </button>
+  </button>
   <h1>Panel de Configuración</h1>
   <p>Usuario: <b id="username"></b></p>
   <button onclick="agregarProfesional()">Agregar Profesional</button>
@@ -158,8 +158,3 @@
   <div id="config"></div>
 </body>
 </html>
-
-
-
-
-
